# burnlings

./: .gitignore  Cargo.toml  README.md  info.toml
exercises/01_tensors/: README.md  tensors1.rs  tensors2.rs  tensors3.rs  tensors4.rs  tensors5.rs  tensors6.rs  tensors7.rs  tensors8.rs  tensors9.rs
exercises/02_ops/: README.md  ops1.rs  ops2.rs  ops3.rs  ops4.rs  ops5.rs  ops6.rs
exercises/03_matmul/: README.md  matmul1.rs  matmul2.rs  matmul3.rs
exercises/04_norms/: README.md  gram1.rs  norms1.rs  norms2.rs
exercises/05_autodiff/: README.md  grad1.rs  grad2.rs  grad3.rs
exercises/06_gradient_descent/: README.md  gd1.rs  gd2.rs
exercises/07_activations/: README.md  act1.rs  act2.rs  act3.rs
exercises/08_losses/: README.md  bce1.rs  ce1.rs  cosine1.rs  huber1.rs  kldiv1.rs  mse1.rs
exercises/09_training/: README.md  opt1.rs  sgd1.rs
exercises/10_backprop/: README.md  bp1.rs  bp2.rs  xor1.rs
exercises/11_from_scratch/: README.md  net1.rs  net2.rs  net3.rs
solutions/01_tensors/: tensors1.rs  tensors2.rs  tensors3.rs  tensors4.rs  tensors5.rs  tensors6.rs  tensors7.rs  tensors8.rs  tensors9.rs
solutions/02_ops/: ops1.rs  ops2.rs  ops3.rs  ops4.rs  ops5.rs  ops6.rs
solutions/03_matmul/: matmul1.rs  matmul2.rs  matmul3.rs
solutions/04_norms/: gram1.rs  norms1.rs  norms2.rs
solutions/05_autodiff/: grad1.rs  grad2.rs  grad3.rs
solutions/06_gradient_descent/: gd1.rs  gd2.rs
solutions/07_activations/: act1.rs  act2.rs  act3.rs
solutions/08_losses/: bce1.rs  ce1.rs  cosine1.rs  huber1.rs  kldiv1.rs  mse1.rs
solutions/09_training/: opt1.rs  sgd1.rs
solutions/10_backprop/: bp1.rs  bp2.rs  xor1.rs
solutions/11_from_scratch/: net1.rs  net2.rs  net3.rs
